# blinken-lights

./: .gitignore  Cargo.toml  mix.exs  shell.nix
_prototype/: Cargo.toml
_prototype/src/: fft.rs  main.rs
assets/: package.json  pnpm-lock.yaml  tsconfig.json
assets/css/: app.css
assets/js/: app.ts  app.tsx  picker.tsx
config/: config.exs
lib/: blinken_lights.ex
lib/blinken_lights/: application.ex  capture.ex  colour_cycle.ex  dark_mode.ex  display_config.ex  router.ex  state.ex  websocket.ex
src/: display.rs  leds.rs  main.rs  null.rs  piano.rs  spectrum.rs  terminal.rs
test/: blinken_lights_test.exs
test/blinken_lights/: dark_mode_test.exs
