[package]
name = "leds"
version = "0.1.0"
edition = "2024"

[dependencies]
smart-leds = "0.3.0"
ws281x-rpi = "0.0.1"
cpal = "0.16.0"
rustfft = "6.4.0"
spectrum-analyzer = "1.7.0"
ringbuf = "0.4.8"

[dependencies.synthrs]
git = "https://github.com/gyng/synthrs"
rev = "77e062f3e40304dd2c3611d70ece6a0e4eaf9750"
