[package]
name = "leds"
version = "0.1.0"
edition = "2024"

[dependencies]
ws281x-rpi = { version = "0.0.1", optional = true }
smart-leds = { version = "0.4.0", optional = true }
cpal = "0.16.0"
rustfft = "6.4.0"
spectrum-analyzer = "1.7.0"
ringbuf = "0.4.8"

[features]
leds = ["smart-leds", "ws281x-rpi"]
